--- a/SkEditorPlus/Windows/Generators/CommandGenerator.xaml
+++ b/SkEditorPlus/Windows/Generators/CommandGenerator.xaml
@@ -15,14 +15,14 @@
         <hc:TextBox x:Name="usageTextbox" HorizontalAlignment="Center" Margin="0,223,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:InfoElement.Title="{DynamicResource CmdGenUsageMsg}" hc:InfoElement.ContentHeight="16"/>
 
         <TextBlock HorizontalAlignment="Left" Margin="19,286,0,0" TextWrapping="Wrap" Text="{DynamicResource CmdGenExecutors}" VerticalAlignment="Top"/>
-        <hc:CheckComboBox KeyboardNavigation.IsTabStop="True"
+        <hc:ComboBox KeyboardNavigation.IsTabStop="True"
                           x:Name="executableByComboBox" HorizontalAlignment="Center" VerticalAlignment="Top" Width="285" Margin="0,307,0,0"
                           KeyUp="OnComboBoxKeyUp">
-            <hc:CheckComboBoxItem Content="{DynamicResource Player}" Tag="player"/>
-            <hc:CheckComboBoxItem Content="{DynamicResource Console}" Tag="console"/>
-        </hc:CheckComboBox>
+            <ComboBoxItem Content="{DynamicResource Player}" Tag="player"/>
+            <ComboBoxItem Content="{DynamicResource Console}" Tag="console"/>
+        </hc:ComboBox>
 
-        <hc:TextBox x:Name="cooldownTextbox" HorizontalAlignment="Left" Margin="10,334,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" hc:InfoElement.Title="{DynamicResource CmdGenCooldown}" hc:InfoElement.ContentHeight="16" hc:InfoElement.Placeholder="{DynamicResource CmdGenQuantity}"/>
+        <hc:TextBox x:Name="cooldownTextbox" HorizontalAlignment="Left" Margin="10,341,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" hc:InfoElement.Title="{DynamicResource CmdGenCooldown}" hc:InfoElement.ContentHeight="16" hc:InfoElement.Placeholder="{DynamicResource CmdGenQuantity}"/>
         <hc:ComboBox x:Name="cooldownComboBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="129" Margin="166,362,0,0" hc:InfoElement.Placeholder="{DynamicResource CmdGenUnit}">
             <hc:AutoCompleteTextBoxItem Content="{DynamicResource Ticks}" Tag="ticks"/>
             <hc:AutoCompleteTextBoxItem Content="{DynamicResource Seconds}" Tag="seconds"/>
